--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/bootstrap-icons.css" />
     <link rel="stylesheet" href="./css/main.css" />
 
-    <title>webprog.io || Home</title>
+    <title>lightningnull || Home</title>
   </head>
 
   <body>
